--- a/tools/vpux-lsp-server/CMakeLists.txt
+++ b/tools/vpux-lsp-server/CMakeLists.txt
@@ -11,11 +11,22 @@
 # included with the Software Package for additional details.
 #
 
-add_subdirectory(model-comparator)
+set(TARGET_NAME "vpux-lsp-server")
 
-add_subdirectory(test_classification)
-add_subdirectory(single-image-test)
+file(GLOB_RECURSE SOURCES "*.cpp" "*.hpp")
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
-add_subdirectory(vpux-opt)
-add_subdirectory(vpux-translate)
-add_subdirectory(vpux-lsp-server)
+add_executable(${TARGET_NAME} ${SOURCES})
+set_target_properties(${TARGET_NAME} PROPERTIES FOLDER "tools")
+
+enable_warnings_as_errors(${TARGET_NAME} WIN_STRICT)
+vpux_enable_clang_format(${TARGET_NAME})
+
+link_system_libraries(${TARGET_NAME}
+    PRIVATE
+        MLIRLspServerLib
+)
+target_link_libraries(${TARGET_NAME}
+    PRIVATE
+        vpux_compiler_static
+)
