EISW-15906: [MLIR] Disable problematic eDSL LIT tests

--- a/tests/lit/edsl/backend/lit.local.cfg
+++ b/tests/lit/edsl/backend/lit.local.cfg
@@ -11,9 +11,9 @@
 # included with the Software Package for additional details.
 #
 
-# from os import environ
+from os import environ
 
-# FIXME
+# FIXME: EISW-15906
 config.unsupported = True
 # config.unsupported = not (
 #         config.has_plaidml and
