--- a/tests/lit/edsl/lit.local.cfg
+++ b/tests/lit/edsl/lit.local.cfg
@@ -11,4 +11,6 @@
 # included with the Software Package for additional details.
 #
 
-config.unsupported = not config.has_plaidml
+# FIXME: EISW-15906
+config.unsupported = True
+# config.unsupported = not config.has_plaidml
