--- a/src/vpux_ngraph_transformations/CMakeLists.txt
+++ b/src/vpux_ngraph_transformations/CMakeLists.txt
@@ -1,5 +1,5 @@
 #
-# Copyright 2020 Intel Corporation.
+# Copyright 2020-2021 Intel Corporation.
 #
 # LEGAL NOTICE: Your use of this software and any required dependent software
 # (the "Software Package") is subject to the terms and conditions of
@@ -15,71 +15,50 @@ if(ENABLE_LTO)
     ie_enable_lto()
 endif()
 
-set(TARGET_NAME "frontend_mcm")
-set(OBJ_TARGET_NAME "frontend_mcm_obj")
-set(STATIC_TARGET_NAME "frontend_mcm_static")
+set(STATIC_TARGET_NAME "vpux_ngraph_transformations")
 
 file(GLOB_RECURSE SOURCES *.cpp *.hpp *.h)
 source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${SOURCES})
 
-add_library(${OBJ_TARGET_NAME} OBJECT ${SOURCES})
+add_library(${STATIC_TARGET_NAME} STATIC ${SOURCES})
 
-ie_faster_build(${OBJ_TARGET_NAME}
+ie_faster_build(${STATIC_TARGET_NAME}
     PCH PRIVATE "src/precomp.hpp"
 )
 
-enable_warnings_as_errors(${OBJ_TARGET_NAME})
-
-target_compile_definitions(${OBJ_TARGET_NAME}
-    PRIVATE
-        IMPLEMENT_INFERENCE_ENGINE_PLUGIN
-)
+enable_warnings_as_errors(${STATIC_TARGET_NAME})
 
 if(MSVC)
-    target_compile_options(${OBJ_TARGET_NAME}
+    target_compile_options(${STATIC_TARGET_NAME}
         PRIVATE
             /wd4146     # unary minus operator applied to unsigned type, result still unsigned
             /wd4996     # code uses a function, class member, variable, or typedef that's marked deprecated
     )
 endif()
 
-target_include_directories(${OBJ_TARGET_NAME}
+target_include_directories(${STATIC_TARGET_NAME}
     PUBLIC
         "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/include"
         "${CMAKE_CURRENT_SOURCE_DIR}/include"
-    PRIVATE
-        "${IE_MAIN_VPUX_PLUGIN_SOURCE_DIR}/src/mcmCompiler/meta/include"
 )
 
-link_system_libraries(${OBJ_TARGET_NAME}
+link_system_libraries(${STATIC_TARGET_NAME}
     PUBLIC
         IE::inference_engine
         IE::inference_engine_legacy
         IE::inference_engine_transformations
-        IE::pugixml
         IE::ngraph_reference
-        IE::vpu_common_lib
-        mcmCompiler
-        flatbuffers
-        vpux_ngraph_transformations
 )
-target_link_libraries(${OBJ_TARGET_NAME}
+target_link_libraries(${STATIC_TARGET_NAME}
     PUBLIC
-        vpux_al
         kmb_utils
 )
 
 if(ENABLE_CLANG_FORMAT)
-    add_clang_format_target(clang_format_${OBJ_TARGET_NAME}
-        FOR_TARGETS ${OBJ_TARGET_NAME}
+    add_clang_format_target(clang_format_${STATIC_TARGET_NAME}
+        FOR_TARGETS ${STATIC_TARGET_NAME}
         EXCLUDE_PATTERNS ".*precomp.hpp"
         ALL
     )
-    add_dependencies(${OBJ_TARGET_NAME} clang_format_${OBJ_TARGET_NAME})
+    add_dependencies(${STATIC_TARGET_NAME} clang_format_${STATIC_TARGET_NAME})
 endif()
-
-add_library(${TARGET_NAME} MODULE $<TARGET_OBJECTS:${OBJ_TARGET_NAME}>)
-target_link_libraries(${TARGET_NAME} PRIVATE ${OBJ_TARGET_NAME})
-
-add_library(${STATIC_TARGET_NAME} STATIC $<TARGET_OBJECTS:${OBJ_TARGET_NAME}>)
-target_link_libraries(${STATIC_TARGET_NAME} PUBLIC ${OBJ_TARGET_NAME})
