Save simple strategizer to CD, remove GPO. Include validate pass in simple. Valid strategies created

--- a/src/mcmCompiler/CMakeLists.txt
+++ b/src/mcmCompiler/CMakeLists.txt
@@ -265,6 +265,8 @@ set(pass
     "${PROJECT_SOURCE_DIR}/src/pass/finalization/assign_se_base_ptr.cpp"
 
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/graph_parameter_optimization.cpp"
+    "${PROJECT_SOURCE_DIR}/src/pass/optimization/heuristic_strategy.cpp"
+    "${PROJECT_SOURCE_DIR}/src/pass/optimization/simple_strategy_manager.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/strategy_manager.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/MetaGraph.cpp"
     "${PROJECT_SOURCE_DIR}/src/pass/optimization/strategy_registry.cpp"
