Implementation for the below:
1) bilinear as dpu
2) clustering->soh, soh->clustering
3) match subtensors of storage element

Need to validate and clear

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -82,6 +82,7 @@
                 "TensorSplitAlgorithms": "Rectangle, Z-Tiling",
                 "_comment": "Supported CostFunctions are: balanced | criticalpath | minmax | greedy. Supported TensorSplitAlgorithms are Rectangle, Z-Tiling"
             },
+            "EnsureSplitStrategiesForNonSpilling",
             "ArrangeKmbExecution",
             "AllocateInputOutputTensorsKmb",
             "AllocateGraphfileTensorsKmb",
