CVS-40814: Add extended input support

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -22,7 +22,7 @@
             "AlignTaskWeights",
             "ImplicitOutputDTypeUpdate",
             "KMBQuantizeConversion",
-            "ConfigureOutputPrecision",
+            "ConfigureIOPrecision",
             "EnsureDTypeCompatibility",
             "GenerateSparsityMapsPopulatedTensors",
             "GenerateWeightsTables",
