--- a/src/mcmCompiler/config/compilation/release_mtl-sc.json
+++ b/src/mcmCompiler/config/compilation/release_mtl-sc.json
@@ -252,7 +252,7 @@
             "AlignTaskWeights",
             "ImplicitOutputDTypeUpdate",
             "KMBQuantizeConversion",
-            "ConfigureOutputPrecision",
+            "ConfigureIOPrecision",
             "EnsureDTypeCompatibility",
             "GenerateSparsityMapsPopulatedTensors",
             "GenerateWeightsTables",
