--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -67,6 +67,7 @@
             "PostTrainingQuantize",
             "MarkEltWiseUpaInputs",
             "MarkCMCompatibleConvs",
+            "MarkSOHnonCompatibleConcats",
             "AddPermuteToNonCMConvPaths",
             {
                 "name" : "SimpleStrategyManager",
