Model F Performance SOH

--- a/src/mcmCompiler/config/compilation/base/release_kmb_base.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base.json
@@ -66,6 +66,7 @@
             "PostTrainingQuantize",
             "MarkEltWiseUpaInputs",
             "MarkCMCompatibleConvs",
+            "MarkSOHnonCompatibleConcats",
             "AddPermuteToNonCMConvPaths",
             {
                 "name" : "SimpleStrategyManager",
