--- a/.gitmodules
+++ b/.gitmodules
@@ -22,6 +22,6 @@
 [submodule "thirdparty/plaidml"]
 	path = thirdparty/plaidml
 	url = https://github.com/plaidml/plaidml.git
-[submodule "level-zero"]
+[submodule "thirdparty/level-zero"]
 	path = thirdparty/level-zero
 	url = https://github.com/jbdallastx/level-zero.git
