--- a/src/mcmCompiler/config/compilation/release_kmb_B0.json
+++ b/src/mcmCompiler/config/compilation/release_kmb_B0.json
@@ -30,6 +30,7 @@
                 "enableWeightsSparsity": true,
                 "enableStaticBarriers": true,
                 "enableSplitBarriers" : false,
+                "enableTensorFusion": true,
                 "real_physical_barriers": 32,
                 "barrier_bound": 16
             }
