--- a/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
+++ b/src/mcmCompiler/config/compilation/base/release_kmb_base_A0.json
@@ -32,6 +32,7 @@
             "RemoveBiasTensors",
             "StrategyLayersToTensors",
             "SetSparsityAttrForUnpopulatedTensors",
+            "FuseConstants",
             "SplittingTensorsAcrossClusters",
             "DeQuantizeU8ConstToFP16Const",
             "FuseImplicits"
@@ -41,6 +42,7 @@
         "Singular": [
             "GenerateSparsityMapsUnpopulatedTensors",
             "GenerateSparsityMapsEltwise",
+            "MarkDMATasksToIgnore",
             {
               "name" : "LocateInplaceEltwiseOps"
             },
@@ -94,6 +96,7 @@
               "allocator_mode": true,
               "ddr_control_edges" : true
             },
+            "SetNotFusedDataIndexes",
             {
                 "name" : "RecomputeImplicitOpAttr",
                 "attribute" : "address"
@@ -102,7 +105,8 @@
             "LayerNumbering",
             "PopulateWeightsTablesPointers",
             "PopulateStorageElementPointers",
-            "MarkAsymmetricalStideTensorsLeadToCMXConcat"
+            "MarkAsymmetricalStrideTensorsLeadToCMXConcat",
+            "RepopulateFusedConstants"
         ]
     },
 
