[MLIR] Rearrange Layer related interfaces
* Move `LayerInterface` to IE dialect.
* Move `RTLayerInterface` and related traits to IERT dialect.
* Remove per-layer specific interfaces.

--- a/src/vpux_compiler/CMakeLists.txt
+++ b/src/vpux_compiler/CMakeLists.txt
@@ -256,6 +256,7 @@ add_passes("dialect/IE" "IE")
 add_rewriters("dialect/IE")
 
 add_dialect("IERT")
+add_op_interfaces("dialect/IERT")
 add_passes("dialect/IERT" "IERT")
 add_rewriters("dialect/IERT")
 
