Add sample for MTL

--- a/samples/kmb_multi_classification_sample/CMakeLists.txt
+++ b/samples/kmb_multi_classification_sample/CMakeLists.txt
@@ -1,8 +1,8 @@
-# Copyright (C) 2018-2021 Intel Corporation
+# Copyright (C) 2018-2019 Intel Corporation
 # SPDX-License-Identifier: Apache-2.0
 #
 
-ie_add_sample(NAME kmb_classification_sample
+ie_add_sample(NAME kmb_multi_classification_sample
               SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
-              HEADERS classification_sample.h
+              HEADERS multi_classification_sample.h
               DEPENDENCIES IE::format_reader kmb_utils IE::ie_samples_utils)
