--- a/samples/kmb_detection_sample/CMakeLists.txt
+++ b/samples/kmb_detection_sample/CMakeLists.txt
@@ -1,8 +1,10 @@
-# Copyright (C) 2018-2020 Intel Corporation
+# Copyright (C) 2018-2021 Intel Corporation
 # SPDX-License-Identifier: Apache-2.0
 #
 
+if(AARCH64)
 ie_add_sample(NAME kmb_detection_sample
               SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/main.cpp"
               HEADERS detection_sample.h
               DEPENDENCIES IE::format_reader ${VPUMGR_LIBRARY} kmb_utils IE::ie_samples_utils)
+endif()
